<resources>
    //Facebook strings :
    <!-- <string name="facebook_app_id">501866660170561</string>
    <string name="fb_login_protocol_scheme">fb501866660170561</string>-->
    <string name="facebook_app_id">159076181332978</string>
    <string name="fb_login_protocol_scheme">fb159076181332978</string>
    <string name="facebook_app_id_2">159076181332978</string>
    <string name="facebook_app_secret">1581ab2b849db9e11d95eb4e0a5e40b1</string>


    <string name="app_name">PokeCard</string>
    <string name="title_activity_home">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="bienvenue">Bienvenue sur PokeCard, veuillez vous connecter pour continuer.</string>
    <string name="num_pokedex">N°Pokedex :</string>
    <string name="connection_error">Erreur de connexion.</string>
    <string name="pokemon_image">Image du Pokemon</string>
    <string name="name">Nom</string>
    <string name="id">id</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokedex">Pokedex</string>
    <string name="my_pokemon">Mes Pokemon</string>
    <string name="deconnection">Deconnexion</string>

    <string name="client_google_token">290043865007-33ptherb22f4q3stgokkkvuqu2fmmn6g.apps.googleusercontent.com</string>


    <string name="card_pokemon_name">Nom du Pokemon</string>
    <string name="card_pokemon_id">Id</string>
    <string name="card_pokemon_image_description">Image du pokemon</string>
    <string name="collection_button_trade">Échanger</string>


    <string name="facebook_name">FACEBOOK</string>
    <string name="google_name">GOOGLE</string>
    <string name="trade_send">Déposer</string>
    <string name="trade_select">Disponible</string>
    <string name="nav_trade">Echanger</string>
    <string name="nav_booster">Booster</string>

</resources>
