<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pokedex"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/pokedex" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_pokemon" />

        <item
            android:id="@+id/nav_trade"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_trade" />

        <item
            android:id="@+id/nav_booster"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_booster" />
    </group>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_deconnection"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/deconnection" />
        </menu>
    </item>

</menu>
