<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_pokemon_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/border_card_pokemon">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/card_pokemon_name"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/card_pokemon_name"
            android:textSize="14sp"
            android:background="@drawable/border_card_pokemon_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/card_pokemon_id"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/card_pokemon_id"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/card_pokemon_id"
            android:textAlignment="center"
            android:textSize="14sp"
            android:background="@drawable/border_card_pokemon_id"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_pokemon_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"/>

        <ImageView
            android:id="@+id/card_pokemon_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/card_pokemon_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"
            android:contentDescription="@string/card_pokemon_image_description" />

        <TextView
            android:id="@+id/card_pokemon_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/card_pokemon_name"
            android:textAlignment="center"
            android:textSize="16sp"
            android:background="@drawable/border_card_pokemon_description"
            app:layout_constraintTop_toBottomOf="@id/card_pokemon_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="10dp"
            android:layout_margin="20dp"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>